--- a/manuscrit_G_LEFEBVRE/abreviations.tex
+++ b/manuscrit_G_LEFEBVRE/abreviations.tex
@@ -8,6 +8,7 @@
 
 \begin{description}
 \itemdesc{BFGS}{algorithme}{Broyden-Fletcher-Goldfarb-Shanno}
+\item[CFL]{numérique}{(condition de) Courant Friedrichs Lewy}
 \itemdesc{CI}{mathématique}{Condition Initiale}
 \itemdesc{CL}{mathématique}{Condition Limite}
 \itemdesc{CHU}{institution}{Centre Hospitalier Universitaire}
